--- a/src/Markdown/05_RQL_lizards.Rmd
+++ b/src/Markdown/05_RQL_lizards.Rmd
@@ -24,27 +24,26 @@ load("/Users/jtk712/Documents/Projects/lizard_sample_types/resources/data/data.R
 ```
 
 ```{r}
-#Aggregate bundle-level GIFTs into the compound level
-GIFTs_elements <- to.elements(genome_gifts,GIFT_db)
-GIFTs_elements_filtered <- GIFTs_elements[rownames(GIFTs_elements) %in% genome_counts$genome,]
-GIFTs_elements_filtered <- as.data.frame(GIFTs_elements_filtered) %>% 
+# Aggregate bundle-level GIFTs into the compound level
+GIFTs_elements <- to.elements(genome_gifts, GIFT_db)
+GIFTs_elements_filtered <- GIFTs_elements[rownames(GIFTs_elements) %in% genome_counts$genome, ]
+GIFTs_elements_filtered <- as.data.frame(GIFTs_elements_filtered) %>%
   select_if(~ !is.numeric(.) || sum(.) != 0)
 
-#Aggregate element-level GIFTs into the function level
-GIFTs_functions <- to.functions(GIFTs_elements_filtered,GIFT_db)
+# Aggregate element-level GIFTs into the function level
+GIFTs_functions <- to.functions(GIFTs_elements_filtered, GIFT_db)
 functions <- GIFTs_functions %>%
   as.data.frame()
 
-#Aggregate function-level GIFTs into overall Biosynthesis, Degradation and Structural GIFTs
-GIFTs_domains <- to.domains(GIFTs_functions,GIFT_db)
+# Aggregate function-level GIFTs into overall Biosynthesis, Degradation and Structural GIFTs
+GIFTs_domains <- to.domains(GIFTs_functions, GIFT_db)
 domains <- GIFTs_domains %>%
   as.data.frame()
-#Get community-weighed average GIFTs per sample
+# Get community-weighed average GIFTs per sample
 genome_counts_row <- genome_counts %>% column_to_rownames(., "genome")
-GIFTs_elements_community <- to.community(GIFTs_elements_filtered,genome_counts_row,GIFT_db)
-GIFTs_functions_community <- to.community(GIFTs_functions,genome_counts_row,GIFT_db)
-GIFTs_domains_community <- to.community(GIFTs_domains,genome_counts_row,GIFT_db)
-
+GIFTs_elements_community <- to.community(GIFTs_elements_filtered, genome_counts_row, GIFT_db)
+GIFTs_functions_community <- to.community(GIFTs_functions, genome_counts_row, GIFT_db)
+GIFTs_domains_community <- to.community(GIFTs_domains, genome_counts_row, GIFT_db)
 ```
 
 ```{r elements, comment="", echo=FALSE, message=FALSE, warning=FALSE}
@@ -54,12 +53,11 @@ mag_weighted <- round(
 
 mag_weighted_t <- mag_weighted %>%
   t() %>%
-#  row_to_names(row_number = 1) %>%
-  as.data.frame()  %>%
-  rownames_to_column(., "samples")  %>%
+  #  row_to_names(row_number = 1) %>%
+  as.data.frame() %>%
+  rownames_to_column(., "samples") %>%
   dplyr::arrange(samples) %>%
   column_to_rownames(., "samples")
-
 ```
 
 
@@ -68,11 +66,11 @@ mag_weighted_t <- mag_weighted %>%
 design <- sample_metadata[, c(
   "sample", "Individual", "Sample_type"
 )]
-design$Type<-0
-design$Type[design$Sample_type=="feces"]<-1
-for(i in 1:ncol(design)){
-  if(is.character(design[,i])){
-    design[,i]<-factor(design[,i])
+design$Type <- 0
+design$Type[design$Sample_type == "feces"] <- 1
+for (i in 1:ncol(design)) {
+  if (is.character(design[, i])) {
+    design[, i] <- factor(design[, i])
   }
 }
 ```
@@ -84,17 +82,21 @@ environmental variables at each site (R, sites are rows and columns are environm
 (L, sites are rows and columsn are abundances of specific species) as a link.
 
 ```{r}
-genome_counts_t_rel <- decostand(mag_weighted_t,method = "total")
+genome_counts_t_rel <- decostand(mag_weighted_t, method = "total")
 genome_counts_t_log <- log1p(genome_counts_t_rel)
 ```
 
 
 ```{r}
-four <- fourthcorner(data.frame(design[c(4)]), genome_counts_t_log, functions, modeltype = 6, 
-                     nrepet = 999,p.adjust.method.G = "fdr",p.adjust.method.D = "fdr")
+four <- fourthcorner(data.frame(design[c(4)]), genome_counts_t_log, functions,
+  modeltype = 6,
+  nrepet = 999, p.adjust.method.G = "fdr", p.adjust.method.D = "fdr"
+)
 summary(four)
 domains
-four_domains <- fourthcorner(data.frame(design[c(4)]), genome_counts_t_log, domains, modeltype = 6, 
-                     nrepet = 999,p.adjust.method.G = "fdr",p.adjust.method.D = "fdr")
+four_domains <- fourthcorner(data.frame(design[c(4)]), genome_counts_t_log, domains,
+  modeltype = 6,
+  nrepet = 999, p.adjust.method.G = "fdr", p.adjust.method.D = "fdr"
+)
 summary(four_domains)
 ```
