--- a/01_prepare_data.Rmd
+++ b/01_prepare_data.Rmd
@@ -4,6 +4,10 @@
 
 Load the original data files outputted by the bioinformatic pipeline.
 
+```{r load_sample_metadata, warning=FALSE, comments="", message=FALSE}
+sample_metadata <- read_tsv("resources/metadata.tsv")
+```
+
 ```{r load_read_counts, warning=FALSE, comments="", message=FALSE}
 read_counts <- read_tsv("resources/coverm/genome.count.tsv.xz") %>%
     rename(genome=1)
@@ -41,18 +45,23 @@ genome_tree$tip.label <- str_replace_all(genome_tree$tip.label,"'", "") #remove 
 genome_tree <- keep.tip(genome_tree, tip=genome_taxonomy$genome) # keep only MAG tips
 ```
 
-```{r load_sample_metadata, warning=FALSE, comments="", message=FALSE}
-sample_metadata <- read_tsv("resources/metadata.tsv")
+```{r load_genome_annotations, warning=FALSE, comments="", message=FALSE}
+genome_annotations <- read_tsv("resources/dram/annotations.tsv.xz") %>%
+    rename(gene=1, genome=2, contig=3)
 ```
 
 ## Create working objects
 
 Transform the original data files into working objects for downstream analyses.
 
+### Merge geno taxonomy and quality
+
 ```{r generate_genome_metadata, warning=FALSE, comments="", message=FALSE}
 genome_metadata <- genome_taxonomy %>%
   left_join(genome_quality,by=join_by(genome==genome)) #join quality
 ```
+
+### Calculate genome coverage
 
 ```{r calculate_genome_coverage, warning=FALSE, comments="", message=FALSE}
 genome_coverage <- genome_hits %>%
@@ -78,6 +87,10 @@ genome_counts_filt <- read_counts_filt %>%
   mutate(across(where(is.numeric), ~ . / (genome_metadata$length / readlength) ))
 ```
 
+```{r distill_annotations, warning=FALSE, comments="", message=FALSE, eval=FALSE}
+genome_gifts <- distill(genome_annotations,GIFT_db,genomecol=2,annotcol=c(9,10,19), verbosity=F)
+```
+
 ## Prepare color scheme
 
 [AlberdiLab](www.alberdilab.dk) projects use unified color schemes developed for the [Earth Hologenome Initiative](www.earthhologenome.org), to facilitate figure interpretation.
@@ -98,5 +111,13 @@ phylum_colors <- read_tsv("https://raw.githubusercontent.com/earthhologenome/EHI
 All working objects are wrapped into a single Rdata object to facilitate downstream usage.
 
 ```{r wrap_working_objects, warning=FALSE, comments="", message=FALSE}
-save(read_counts, genome_counts, genome_counts_filt, genome_tree, genome_metadata, sample_metadata, phylum_colors, file = "resources/data.Rdata")
+save(sample_metadata, 
+     genome_metadata, 
+     read_counts, 
+     genome_counts, 
+     genome_counts_filt, 
+     genome_tree,
+     genome_gifts, 
+     phylum_colors, 
+     file = "resources/data.Rdata")
 ```
