--- a/01_prepare_data.Rmd
+++ b/01_prepare_data.Rmd
@@ -91,6 +91,114 @@ genome_counts_filt <- read_counts_filt %>%
 genome_gifts <- distill(genome_annotations,GIFT_db,genomecol=2,annotcol=c(9,10,19), verbosity=F)
 ```
 
+## Load data statistics
+
+
+```{r raw_reads, warning=FALSE, comments="", message=FALSE}
+raw_reads <-
+  "resources/report/by_step/reads_data/multiqc_general_stats.txt.xz" %>%
+  read_tsv() %>%
+  select(
+    sample = Sample,
+    raw_reads = `FastQC_mqc-generalstats-fastqc-total_sequences`
+  ) %>%
+  mutate(
+    sample = sample %>% str_remove_all("_1$") %>% str_remove_all("_2$")
+  ) %>%
+  summarise(raw_reads = sum(raw_reads), .by = sample)
+```
+
+```{r filtered_reads, warning=FALSE, comments="", message=FALSE}
+fastp_reads <-
+  "resources/report/by_step/preprocessing_data/multiqc_general_stats.txt.xz" %>%
+  read_tsv() %>%
+  filter(str_detect(Sample, "fastp")) %>%
+  select(
+    sample = Sample,
+    trimmed_reads = `FastQC_mqc-generalstats-fastqc-total_sequences`
+  ) %>%
+  mutate(
+    sample =
+      sample %>%
+        str_remove_all("_[u12]+$") %>%
+        str_remove_all("^fastp \\| ")
+  ) %>%
+  summarise(trimmed_reads = sum(trimmed_reads), .by = sample)
+```
+
+```{r host_mapped, warning=FALSE, comments="", message=FALSE}
+host_mapped <-
+  "resources/report/by_step/preprocessing_data/multiqc_general_stats.txt.xz" %>%
+  read_tsv() %>%
+  filter(!str_detect(Sample, "fastp")) %>%
+  select(
+    sample = Sample,
+    host_mapped = `Samtools_mqc-generalstats-samtools-reads_mapped`,
+    mapping_total = `Samtools_mqc-generalstats-samtools-raw_total_sequences`
+  ) %>%
+  mutate(
+    host_unmapped = mapping_total - host_mapped
+  ) %>%
+  filter(!is.na(host_mapped)) %>%
+  separate(
+    col = sample,
+    into = c("host_name", "sample"),
+    sep = " \\| "
+  ) %>%
+  rename(mapped = host_mapped, unmapped = host_unmapped) %>%
+  select(-mapping_total) %>%
+  pivot_longer(-host_name:-sample) %>%
+  mutate(
+    name = str_glue("{name}_{host_name}")
+  ) %>%
+  select(-host_name) %>%
+  pivot_wider()
+```
+
+```{r singlem, warning=FALSE, comments="", message=FALSE}
+singlem <-
+  "resources/singlem/microbial_fraction.tsv.xz" %>%
+  read_tsv() %>%
+  distinct() %>%
+  mutate(
+    sample = sample %>% str_remove_all("_1$"),
+    read_fraction = read_fraction %>% str_remove("%") %>% as.numeric(),
+    read_fraction = read_fraction / 100
+  ) %>%
+  select(
+    sample,
+    singlem_prokaryotic_bases = bacterial_archaeal_bases,
+    singlem_metagenome_size = metagenome_size,
+    singlem_read_fraction = read_fraction,
+  )
+```
+
+```{r nonpareil, warning=FALSE, comments="", message=FALSE}
+nonpareil <-
+  "resources/nonpareil/nonpareil.tsv.xz" %>%
+  read_tsv() %>%
+  select(sample=sample_id, nonpareil_c = C, nonpareil_diversity = diversity)
+```
+
+
+```{r mag_mapping, warning=FALSE, comments="", message=FALSE}
+mag_mapping <-
+  "resources/coverm/contig.count.tsv.xz" %>%
+  read_tsv() %>%
+  pivot_longer(-sequence_id) %>%
+  summarise(value = sum(value), .by = "name") %>%
+  rename(sample = name, mapped_mags = value)
+```
+
+```{r wrap_statistics, warning=FALSE, comments="", message=FALSE}
+data_stats <- raw_reads %>%
+  left_join(fastp_reads) %>%
+  left_join(host_mapped) %>%
+  left_join(singlem) %>%
+  left_join(nonpareil) %>%
+  left_join(mag_mapping)
+```
+
 ## Prepare color scheme
 
 [AlberdiLab](www.alberdilab.dk) projects use unified color schemes developed for the [Earth Hologenome Initiative](www.earthhologenome.org), to facilitate figure interpretation.
@@ -118,6 +226,7 @@ save(sample_metadata,
      genome_counts_filt, 
      genome_tree,
      genome_gifts, 
-     phylum_colors, 
+     phylum_colors,
+     data_stats,
      file = "resources/data.Rdata")
 ```
