--- a/index.Rmd
+++ b/index.Rmd
@@ -1,10 +1,11 @@
 ---
-title: "Contrasting recovery of metagenome‑assembled genomes and derived microbial communities from lizard fecal and cloacal samples"
-subtitle: "Data Analysis"
+title: "AlberdiLab | Hernandez et al. 2024"
+subtitle: "Contrasting recovery of metagenome‑assembled genomes and derived microbial communities from lizard fecal and cloacal samples"
 author:
-  - Mauricio Hernandez
-  - Jorge Langaa^[University of Copenhagen, jorge.langa@sund.ku.dk]
+  - Mauricio Hernandez^[Universidad Nacional Autónoma de Honduras, delmer.hernandez@unah.edu.hn]
+  - Jorge Langa^[University of Copenhagen, jorge.langa@sund.ku.dk]
   - Ostaizka Aizpurua^[University of Copenhagen, ostaizka.aizpurua@sund.ku.dk]
+  - Yendi E. Navarro-Noya^[Universidad Autónoma de Tlaxcala, yendiebenezer.navarro.n@uatx.mx]
   - Antton Alberdi^[University of Copenhagen, antton.alberdi@sund.ku.dk]
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
@@ -12,7 +13,7 @@ documentclass: book
 bibliography: [book.bib, packages.bib]
 url: https://alberdilab.github.io/lizard_sample_types
 description: |
-  Data analysis code.
+  Data analysis code for the study on the recovery of metagenome‑assembled genomes and derived microbial communities from lizard fecal and cloacal samples.
 link-citations: yes
 github-repo: alberdilab/lizard_sample_types
 ---
@@ -25,6 +26,8 @@ knitr::opts_chunk$set(
 ```
 
 # Introduction
+
+This webbook contains all the code used for data analysis in study on the recovery of metagenome‑assembled genomes and derived microbial communities from lizard fecal and cloacal samples.
 
 ## Prepare the R environment
 
@@ -40,7 +43,7 @@ And indicating the following git repository:
 
 > https://github.com/alberdilab/lizard_sample_types.git
 
-Once the R project has been created, follow the instructions and code chunks shown in this webbook. 
+Once the R project has been created, follow the instructions and code chunks shown in this webbook.
 
 ### Libraries
 
@@ -60,7 +63,7 @@ library(phytools)
 
 # For plotting
 library(ggplot2)
-library(ggrepel) 
+library(ggrepel)
 library(ggpubr)
 library(ggnewscale)
 library(gridExtra)
@@ -70,9 +73,11 @@ library(ggh4x)
 
 # For statistics
 library(spaa)
-library(vegan) 
+library(vegan)
 library(Rtsne)
 library(geiger)
 library(hilldiv2)
 library(distillR)
+library(ANCOMBC)
+library(lme4)
 ```
